Overlaps cards and fixes issues with progressing rounds

--- a/src/app/games/cards/cards.component.css
+++ b/src/app/games/cards/cards.component.css
@@ -52,6 +52,10 @@
   color: black;
 }
 
+.white-card-set .white-card {
+  margin-top: -5px;
+}
+
 .header .item {
   margin-right: 20px;
 }
@@ -62,5 +66,7 @@
 
 [disabled] {
   cursor: not-allowed;
-  opacity: 0.5;
+  background-color: lightgray;
+  border-color: gray;
 }
+
